--- a/src/main/resources/templates/movie-detail.html
+++ b/src/main/resources/templates/movie-detail.html
@@ -12,7 +12,7 @@
     <div class="max-w-6xl mx-auto px-4 py-4 flex justify-between items-center">
 
         <nav class="flex space-x-8">
-            <a href="/allFilms"
+            <a href="/api/movie/all"
                class="py-2 px-1 border-b-2 font-medium text-sm transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300">
                 Фильмы
             </a>
@@ -20,7 +20,7 @@
                class="py-2 px-1 border-b-2 font-medium text-sm transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300">
                 Просмотренное
             </a>
-            <a href="/to-watch"
+            <a href="/api/movie/to-watch"
                class="py-2 px-1 border-b-2 font-medium text-sm transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300">
                 Буду смотреть
             </a>
@@ -39,7 +39,7 @@
 <main class="max-w-6xl mx-auto px-4 py-8">
     <div class="flex flex-col md:flex-row">
         <div class="w-full md:w-1/12 mb-4 md:mb-0 flex items-start">
-            <a href="/api/movie/all" class="inline-flex items-center text-purple-600 hover:text-purple-800 font-medium">
+            <a href="javascript:history.back()" class="inline-flex items-center text-purple-600 hover:text-purple-800 font-medium">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M9.707 16.707a1 1 0 01-1.414 0l-6-6a1 1 0 010-1.414l6-6a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l4.293 4.293a1 1 0 010 1.414z" clip-rule="evenodd" />
                 </svg>
