--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -10,7 +10,7 @@
 <header class="bg-white shadow-md">
     <div class="max-w-6xl mx-auto px-4 py-4 flex justify-between items-center">
         <nav class="flex space-x-8">
-            <a href="/allFilms"
+            <a href="/api/movie/all"
                class="py-2 px-1 border-b-2 font-medium text-sm transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300">
                 Фильмы
             </a>
@@ -18,7 +18,7 @@
                class="py-2 px-1 border-b-2 font-medium text-sm transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300">
                 Просмотренное
             </a>
-            <a href="/to-watch"
+            <a href="/api/movie/to-watch"
                class="py-2 px-1 border-b-2 font-medium text-sm transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300">
                 Буду смотреть
             </a>
