--- a/src/main/resources/templates/allFilms.html
+++ b/src/main/resources/templates/allFilms.html
@@ -17,7 +17,7 @@
                th:classappend="${active == 'films'} ? 'border-purple-500 text-gray-900'">
                 Фильмы
             </a>
-            <a href="/watched"
+            <a href="/api/movie/watched"
                class="py-2 px-1 border-b-2 font-medium text-sm transition-colors border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
                th:classappend="${active == 'watched'} ? 'border-purple-500 text-gray-900'">
                 Просмотренное
